--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "babel": "./node_modules/.bin/babel",
     "build": "./build.sh",
+    "release": "dotenv release-it",
     "watch-and-serve": "nodemon -e yml,js,json,txt --inspect --exec babel-node index.js",
     "serve": "babel-node index.js",
     "serveip": "babel-node iprangeToCidr.js",
@@ -45,12 +46,12 @@
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
     "pkg": "^4.4.9",
-    "release-it": "^14.0.3"
+    "release-it": "^14.0.3",
+    "dotenv-cli": "^4.0.0"
   },
   "dependencies": {
     "axios": "^0.20.0",
     "batch-promises": "0.0.3",
-    "csv-parse": "^4.12.0",
     "ip-address": "^6.4.0",
     "ip-sub": "^1.0.10",
     "md5": "^2.3.0",
@@ -67,7 +68,8 @@
   "release-it": {
     "hooks": {
       "before:init": [
-        "npm install"
+        "npm install",
+        "npm run build"
       ],
       "after:bump": "npm run build",
       "after:release": [
