--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "ip-sub": "^1.0.12",
     "md5": "^2.3.0",
     "moment": "^2.29.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "yargs": "^16.0.3"
   },
   "pkg": {
     "scripts": [],
