--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "batch-promises": "0.0.3",
+    "cli-progress": "^3.8.2",
     "ip-address": "^6.4.0",
     "ip-sub": "^1.0.12",
     "md5": "^2.3.0",
