--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "chai": "^4.2.0",
     "chai-subset": "^1.6.0",
     "dot-env": "0.0.1",
+    "dotenv-cli": "^4.0.0",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
     "pkg": "^4.4.9",
-    "release-it": "^14.0.3",
-    "dotenv-cli": "^4.0.0"
+    "release-it": "^14.0.4"
   },
   "dependencies": {
     "axios": "^0.20.0",
@@ -55,7 +55,7 @@
     "ip-address": "^6.4.0",
     "ip-sub": "^1.0.12",
     "md5": "^2.3.0",
-    "moment": "^2.29.0",
+    "moment": "^2.29.1",
     "readline": "^1.3.0",
     "yargs": "^16.0.3"
   },
@@ -69,7 +69,7 @@
   "release-it": {
     "hooks": {
       "before:init": [
-        "npm install"
+        "npm ci"
       ],
       "after:bump": "npm run build",
       "after:release": [
