--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "babel": "./node_modules/.bin/babel",
     "build": "./build.sh",
     "release": "dotenv release-it",
-    "watch-and-serve": "nodemon -e yml,js,json,txt --inspect --exec babel-node index.js",
     "serve": "babel-node index.js",
     "inspect": "node --inspect --require @babel/register index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -33,31 +32,27 @@
   },
   "homepage": "https://github.com/massimocandela/geofeed-finder#readme",
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/node": "^7.10.5",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "chai": "^4.2.0",
-    "chai-subset": "^1.6.0",
-    "dot-env": "0.0.1",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.6",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
     "dotenv-cli": "^4.0.0",
-    "mocha": "^8.1.3",
-    "nodemon": "^2.0.4",
     "pkg": "^4.4.9",
-    "release-it": "^14.0.4"
+    "release-it": "^14.2.1"
   },
   "dependencies": {
     "axios": "^0.20.0",
     "batch-promises": "0.0.3",
+    "bulk-whois-parser": "^1.0.7",
     "cli-progress": "^3.8.2",
     "ip-address": "^6.4.0",
-    "ip-sub": "^1.0.12",
+    "ip-sub": "^1.0.14",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "readline": "^1.3.0",
-    "yargs": "^16.0.3"
+    "yargs": "^16.1.0"
   },
   "pkg": {
     "scripts": [],
