build before release

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
       "before:init": [
         "npm ci"
       ],
-      "after:bump": "npm run compile",
+      "after:bump": "npm run build",
       "after:release": [
         "echo Successfully released ${name} v${version} to ${repo.repository}.",
         "rm -r bin/"
