--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
   "homepage": "https://github.com/massimocandela/geofeed-finder#readme",
   "devDependencies": {
     "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.14",
+    "@babel/core": "^7.13.15",
     "@babel/node": "^7.13.13",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-env": "^7.13.15",
     "dotenv-cli": "^4.0.0",
     "pkg": "^4.5.1",
     "release-it": "^14.5.1"
@@ -48,13 +48,14 @@
   "dependencies": {
     "axios": "^0.21.1",
     "batch-promises": "0.0.3",
-    "bulk-whois-parser": "^1.0.11",
+    "bulk-whois-parser": "^1.0.12",
     "cli-progress": "^3.9.0",
     "ip-address": "^7.1.0",
     "ip-sub": "^1.0.21",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "readline": "^1.3.0",
+    "whois": "^2.13.3",
     "yargs": "^16.2.0"
   },
   "pkg": {
