update branch name in release script

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "git": {
       "changelog": "git log --pretty=format:\"* %s (%h)\" ${from}...${to}",
       "requireCleanWorkingDir": true,
-      "requireBranch": "master",
+      "requireBranch": "main",
       "requireUpstream": true,
       "requireCommits": false,
       "addUntrackedFiles": false,
