--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "cli-progress": "^3.9.0",
     "ip-address": "^8.0.0",
     "ip-sub": "^1.0.25",
+    "iso-3166-1": "^2.0.1",
+    "iso-3166-2": "^1.0.0",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "readline": "^1.3.0",
