--- a/package.json
+++ b/package.json
@@ -35,29 +35,29 @@
   },
   "homepage": "https://github.com/massimocandela/geofeed-finder#readme",
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.5",
-    "@babel/node": "^7.16.5",
-    "@babel/plugin-proposal-class-properties": "^7.16.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.7",
+    "@babel/node": "^7.16.8",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
     "dotenv-cli": "^4.1.1",
-    "pkg": "^5.5.1",
-    "release-it": "^14.11.8"
+    "pkg": "^5.5.2",
+    "release-it": "^14.12.1"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "batch-promises": "0.0.3",
-    "bulk-whois-parser": "^1.0.24",
-    "cli-progress": "^3.9.1",
+    "bulk-whois-parser": "^1.1.1",
+    "cli-progress": "^3.10.0",
+    "csv-parse": "^5.0.4",
     "geofeed-validator": "^1.0.4",
     "ip-address": "^8.1.0",
     "ip-sub": "^1.2.1",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
-    "readline": "^1.3.0",
     "whois": "^2.13.7",
-    "yargs": "^17.3.0"
+    "yargs": "^17.3.1"
   },
   "pkg": {
     "scripts": [],
