Add MacOS ARM64 binary to release artifacts

--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
       "assets": [
         "bin/geofeed-finder-linux-x64",
         "bin/geofeed-finder-macos-x64",
+        "bin/geofeed-finder-macos-arm64",
         "bin/geofeed-finder-win-x64.exe"
       ]
     }
