--- a/package.json
+++ b/package.json
@@ -39,19 +39,20 @@
     "@babel/core": "^7.19.3",
     "@babel/node": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
-    "@babel/preset-env": "^7.19.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.19.4",
+    "@babel/preset-env": "^7.19.4",
     "dotenv-cli": "^6.0.0",
     "pkg": "^5.8.0",
-    "release-it": "^15.4.2"
+    "release-it": "^15.5.0"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.1.3",
     "batch-promises": "0.0.3",
-    "bulk-whois-parser": "^1.1.4",
+    "bulk-whois-parser": "^1.1.5",
     "cli-progress": "^3.11.2",
-    "csv-parse": "^5.3.0",
-    "geofeed-validator": "^1.1.0",
+    "csv-parse": "^5.3.1",
+    "fast-file-logger": "^1.1.5",
+    "geofeed-validator": "^1.1.3",
     "ip-address": "^8.1.0",
     "ip-sub": "^1.3.2",
     "md5": "^2.3.0",
