--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
       "after:bump": "npm run build",
       "after:release": [
         "echo Successfully released ${name} v${version} to ${repo.repository}.",
-        "rm -r bin/",
-        "rm -r dist/"
+        "rm -rf bin/",
+        "rm -rf dist/"
       ]
     },
     "git": {
