--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   "homepage": "https://github.com/massimocandela/geofeed-finder#readme",
   "devDependencies": {
     "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.19.3",
-    "@babel/node": "^7.19.1",
+    "@babel/core": "^7.19.6",
+    "@babel/node": "^7.20.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.19.4",
     "@babel/preset-env": "^7.19.4",
@@ -46,15 +46,15 @@
     "release-it": "^15.5.0"
   },
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "=0.26.1",
     "batch-promises": "0.0.3",
-    "bulk-whois-parser": "^1.1.5",
+    "bulk-whois-parser": "^1.1.8",
     "cli-progress": "^3.11.2",
-    "csv-parse": "^5.3.1",
+    "csv-parse": "=4.16.3",
     "fast-file-logger": "^1.1.5",
     "geofeed-validator": "^1.1.3",
     "ip-address": "^8.1.0",
-    "ip-sub": "^1.3.2",
+    "ip-sub": "^1.3.3",
     "md5": "^2.3.0",
     "moment": "^2.29.4",
     "whois": "^2.13.9",
