--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "geofeed-validator": "^1.1.5",
     "ip-address": "^8.1.0",
     "ip-sub": "^1.3.5",
+    "longest-prefix-match": "^1.1.20",
     "md5": "^2.3.0",
     "moment": "^2.29.4",
     "whois": "^2.14.0",
