--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "babel": "./node_modules/.bin/babel",
     "build": "./build.sh",
-    "compile": "rm -rf dist/ && babel src -d dist && cp -R src/dataset/ dist/dataset/",
+    "compile": "rm -rf dist/ && babel src -d dist",
     "release": "dotenv release-it",
     "serve": "babel-node src/index.js",
     "inspect": "node --inspect --require @babel/register index.js",
