--- a/package.json
+++ b/package.json
@@ -35,28 +35,28 @@
   },
   "homepage": "https://github.com/massimocandela/geofeed-finder#readme",
   "devDependencies": {
-    "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.2",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
     "@babel/node": "^7.22.19",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-env": "^7.23.6",
     "dotenv-cli": "^7.3.0",
     "pkg": "^5.8.1",
     "release-it": "^16.2.1"
   },
   "dependencies": {
-    "axios": "=0.27.2",
     "batch-promises": "0.0.3",
-    "bulk-whois-parser": "^1.3.0",
+    "bulk-whois-parser": "^1.3.2",
     "cli-progress": "^3.12.0",
     "fast-file-logger": "^1.1.5",
     "geofeed-validator": "^1.2.3",
     "ip-address": "^8.1.0",
-    "ip-sub": "^1.3.9",
+    "ip-sub": "^1.5.1",
     "longest-prefix-match": "^1.2.6",
     "md5": "^2.3.0",
     "moment": "^2.29.4",
+    "redaxios": "^0.5.1",
     "whois": "https://gitpkg.now.sh/massimocandela/node-whois?dist",
     "yargs": "^17.7.2"
   },
