--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
       "assets": [
         "bin/geofeed-finder-linux-x64",
         "bin/geofeed-finder-macos-x64",
-        "bin/geofeed-finder-win-x64.exe"
+        "bin/geofeed-finder-win-x64.exe",
+        "bin/geofeed-finder-macos-arm64"
       ]
     }
   }
